OSTJ-193 Add missing oiva config for running locally

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -59,6 +59,10 @@ koodisto.baseurl=http://localhost:${server.port}/organisaatio-service/mock/koodi
 organisaatio.service.username.to.koodisto=
 organisaatio.service.password.to.koodisto=
 
+oiva.baseurl=http://localhost:${server.port}/organisaatio-service/mock/oiva
+oiva.username=oivausername
+oiva.password=oivapassword
+
 organisaatio-service.scheduled.update.cron.expression= 0 0 0 * * ?
 organisaatio.service.username.to.viestinta=
 organisaatio.service.password.to.viestinta=
