Upgrade Java from 11 to 21
Changes for Java 21
* Upgrade Gradle to 8.4
* Upgrade Lombok to 1.18.30
* Upgrade Spring Boot to 2.7.17
* Upgrade modelmapper to 3.2.0

Changes for Gradle 8.4
* Upgrade io.mateo.cxf-vodegen to 1.2.1
* Upgrade sonarqube to 4.4.1.3373
* Add explicit dependencies on :organisaatio-ui:webjar task

--- a/ytj-client/build.gradle
+++ b/ytj-client/build.gradle
@@ -21,7 +21,7 @@ subprojects {
         }
 
         maven {
-            url = uri('http://repo.maven.apache.org/maven2')
+            url = uri('https://repo.maven.apache.org/maven2')
         }
     }
 
