--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.5'
+    id 'org.springframework.boot' version '2.7.17'
     id 'io.spring.dependency-management' version '1.0.13.RELEASE'
     id 'java'
     id 'jacoco'
@@ -57,7 +57,7 @@ dependencies {
     implementation group: 'org.jasig.cas.client', name: 'cas-client-core', version: '3.5.0'
     implementation group: 'org.postgresql', name: 'postgresql'
     implementation group: 'com.github.kagkarlsson', name: 'db-scheduler-spring-boot-starter', version: '11.5'
-    implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.4.3'
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
     implementation group: 'org.flywaydb', name: 'flyway-core', version: '6.5.7'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
 
@@ -101,8 +101,8 @@ dependencies {
 
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     // Lombok
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
-    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
 
     // QueryDSL & JPA
     annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
@@ -151,3 +151,8 @@ jacocoTestReport {
         csv.required = false
     }
 }
+
+bootJar.dependsOn(':organisaatio-ui:webjar')
+run.dependsOn(':organisaatio-ui:webjar')
+startScripts.dependsOn(':organisaatio-ui:webjar')
+compileTestJava.dependsOn(':organisaatio-ui:webjar')
