--- a/ytj-client/ytj-webservice/build.gradle
+++ b/ytj-client/ytj-webservice/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     implementation 'org.apache.cxf:cxf-rt-transports-http:3.5.3'
     implementation 'commons-codec:commons-codec:1.15'
     implementation 'org.slf4j:slf4j-api:2.0.3'
-    runtime 'org.slf4j:slf4j-log4j12:2.0.3'
+    runtimeOnly 'org.slf4j:slf4j-log4j12:2.0.3'
     implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
     implementation 'javax.xml.ws:jaxws-api:2.3.1'
     testImplementation 'junit:junit:4.13.2'
