--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -111,6 +111,9 @@ dependencies {
     compileOnly group: 'com.querydsl', name: 'querydsl-jpa', version: queryDslVersion
     annotationProcessor group: 'com.querydsl', name: 'querydsl-apt', version: queryDslVersion, classifier: 'jpa'
 
+    // Excel
+    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.5'
+
     // Test Dependencies
     testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.4.1'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: junitVersion
