OSTJ-201 Add feature flag

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -79,6 +79,7 @@ db-scheduler.delay-startup-until-context-ready=true
 
 feature.mockapi=true
 feature.ostj-182-uusi-osoitepalvelu=true
+feature.ostj-201-muotoilematon-viesti=true
 
 aws.sns.lakkautusTopicArn=undefined
 aws.sns.enabled=false
