--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -130,6 +130,7 @@ rajapinnat.ytj.avain=TEST
 
 feature.mockapi=true
 feature.ostj-182-uusi-osoitepalvelu=true
+feature.ostj-201-muotoilematon-viesti=true
 
 aws.sns.lakkautusTopicArn=undefined
 aws.sns.enabled=false
