OSTJ-201 Client for calling viestinvälityspalvelu

--- a/organisaatio-service/src/main/resources/config/pallero.yml
+++ b/organisaatio-service/src/main/resources/config/pallero.yml
@@ -3,3 +3,4 @@ feature.ostj-182-uusi-osoitepalvelu: true
 feature.ostj-201-muotoilematon-viesti: false
 
 koodisto.baseurl: "https://${host.virkailija}/koodisto-service"
+viestinvalitys.baseurl: "https://viestinvalitys.testiopintopolku.fi"
