--- a/organisaatio-service/src/main/resources/config/hahtuva.yml
+++ b/organisaatio-service/src/main/resources/config/hahtuva.yml
@@ -3,3 +3,4 @@ feature.ostj-182-uusi-osoitepalvelu: true
 feature.ostj-201-muotoilematon-viesti: true
 
 koodisto.baseurl: "https://${host.virkailija}/koodisto-service"
+viestinvalitys.baseurl: "https://viestinvalitys.hahtuvaopintopolku.fi"
