OSTJ-201 Email handling logic for form submission

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -55,6 +55,7 @@ organisaatio.serviceuser.oid=1.2.246.562.24.47727091944
 organisaatio.service.username=xxx
 organisaatio.service.password=xxx
 
+viestinvalitys.baseurl=http://localhost:${server.port}/organisaatio-service/mock/viestinvalitys
 koodisto.baseurl=http://localhost:${server.port}/organisaatio-service/mock/koodisto-service
 organisaatio.service.username.to.koodisto=
 organisaatio.service.password.to.koodisto=
