--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -54,6 +54,7 @@ organisaatio.serviceuser.oid=1.2.246.562.24.47727091944
 organisaatio.service.username=username
 organisaatio.service.password=password
 
+viestinvalitys.baseurl=http://localhost:${server.port}/organisaatio-service/mock/viestinvalitys
 koodisto.baseurl=http://localhost:${server.port}/organisaatio-service/mock/koodisto-service
 organisaatio.service.username.to.koodisto=username
 organisaatio.service.password.to.koodisto=password
