OSTJ-201 Change viestisnvälityspalvelu service url to include the /lahetys path
This was changed on 2024-01-16

--- a/organisaatio-service/src/main/resources/config/sade.yml
+++ b/organisaatio-service/src/main/resources/config/sade.yml
@@ -3,4 +3,4 @@ feature.ostj-182-uusi-osoitepalvelu: false
 feature.ostj-201-muotoilematon-viesti: false
 
 koodisto.baseurl: "https://${host.virkailija}/koodisto-service"
-viestinvalitys.baseurl: "https://viestinvalitys.opintopolku.fi"
+viestinvalitys.baseurl: "https://viestinvalitys.opintopolku.fi/lahetys"
