OSTJ-201 Mail sending result view for the case where sending to Viestinvälityspalvelu failed

--- a/organisaatio-service/src/main/resources/config/untuva.yml
+++ b/organisaatio-service/src/main/resources/config/untuva.yml
@@ -4,3 +4,4 @@ feature.ostj-201-muotoilematon-viesti: true
 
 koodisto.baseurl: "https://${host.virkailija}/koodisto-service"
 viestinvalitys.baseurl: "https://viestinvalitys.untuvaopintopolku.fi/lahetys"
+viestinvalitys.uiurl: "https://viestinvalitys.untuvaopintopolku.fi/"
