--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -55,6 +55,7 @@ organisaatio.service.username=username
 organisaatio.service.password=password
 
 viestinvalitys.baseurl=http://localhost:${server.port}/organisaatio-service/mock/viestinvalitys
+viestinvalitys.uiurl=https://viestinvalitys.hahtuvaopintopolku.fi
 koodisto.baseurl=http://localhost:${server.port}/organisaatio-service/mock/koodisto-service
 organisaatio.service.username.to.koodisto=username
 organisaatio.service.password.to.koodisto=password
