--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -56,6 +56,7 @@ organisaatio.service.username=xxx
 organisaatio.service.password=xxx
 
 viestinvalitys.baseurl=http://localhost:${server.port}/organisaatio-service/mock/viestinvalitys
+viestinvalitys.uiurl=https://viestinvalitys.hahtuvaopintopolku.fi
 koodisto.baseurl=http://localhost:${server.port}/organisaatio-service/mock/koodisto-service
 organisaatio.service.username.to.koodisto=
 organisaatio.service.password.to.koodisto=
