--- a/organisaatio-service/src/main/resources/config/hahtuva.yml
+++ b/organisaatio-service/src/main/resources/config/hahtuva.yml
@@ -4,3 +4,4 @@ feature.ostj-201-muotoilematon-viesti: true
 
 koodisto.baseurl: "https://${host.virkailija}/koodisto-service"
 viestinvalitys.baseurl: "https://viestinvalitys.hahtuvaopintopolku.fi/lahetys"
+viestinvalitys.uiurl: "https://viestinvalitys.hahtuvaopintopolku.fi/"
