--- a/organisaatio-service/src/main/resources/config/sade.yml
+++ b/organisaatio-service/src/main/resources/config/sade.yml
@@ -4,3 +4,4 @@ feature.ostj-201-muotoilematon-viesti: false
 
 koodisto.baseurl: "https://${host.virkailija}/koodisto-service"
 viestinvalitys.baseurl: "https://viestinvalitys.opintopolku.fi/lahetys"
+viestinvalitys.uiurl: "https://viestinvalitys.opintopolku.fi/"
