--- a/rekisterointi/.github/workflows/build-service.yml
+++ b/rekisterointi/.github/workflows/build-service.yml
@@ -21,11 +21,11 @@ jobs:
       - name: Build react app
         run: npm run build
         working-directory: rekisterointi-ui
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: "17"
-          distribution: "temurin"
+          java-version: "21"
+          distribution: "corretto"
           cache: "maven"
       - name: Build
         env:
@@ -42,11 +42,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: "17"
-          distribution: "temurin"
+          java-version: "21"
+          distribution: "corretto"
           cache: "maven"
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
@@ -79,11 +79,11 @@ jobs:
           node-version: "18.x"
           cache: "npm"
           cache-dependency-path: rekisterointi-ui/package-lock.json
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: "17"
-          distribution: "temurin"
+          java-version: "21"
+          distribution: "corretto"
           cache: "maven"
       - name: Install app dependencies
         run: npm ci
