--- a/varda-rekisterointi/.github/workflows/build.yml
+++ b/varda-rekisterointi/.github/workflows/build.yml
@@ -19,11 +19,11 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '21'
+          distribution: 'corretto'
           cache: 'maven'
       - name: Maven version
         run: mvn --version
@@ -61,7 +61,7 @@ jobs:
         run: |
           git clone https://github.com/Opetushallitus/ci-tools.git
           source ci-tools/common/setup-tools.sh
-          export BASE_IMAGE="baseimage-fatjar-openjdk11:master"
+          export BASE_IMAGE="baseimage-fatjar-openjdk21:master"
           export ARTIFACT_NAME="varda-rekisterointi"
           cp varda-rekisterointi.jar $DOCKER_BUILD_DIR/artifact/$ARTIFACT_NAME.jar
           cp -vr oph-configuration $DOCKER_BUILD_DIR/config/
