--- a/varda-rekisterointi/pom.xml
+++ b/varda-rekisterointi/pom.xml
@@ -130,8 +130,8 @@
         </dependency>
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock-jre8</artifactId>
-            <version>2.25.0</version>
+            <artifactId>wiremock-jre8-standalone</artifactId>
+            <version>2.35.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
