Rename create-alert job to npm-audit so it makes sense on build radiator

--- a/rekisterointi/.github/workflows/npm-audit-alert.yml
+++ b/rekisterointi/.github/workflows/npm-audit-alert.yml
@@ -14,7 +14,7 @@ on:
     - cron: "0 12 * * *"
 
 jobs:
-  create-alert:
+  npm-audit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
