remove the whole organisaatio-ui gradle project

--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -21,7 +21,6 @@ compileJava {
 }
 
 dependencies {
-    implementation project(':organisaatio-ui')
     implementation project(':organisaatio-api')
     implementation project(':ytj-client:ytj-api')
     implementation(project(':ytj-client:ytj-webservice')) {
@@ -134,7 +133,8 @@ jacocoTestReport {
     }
 }
 
-bootJar.dependsOn(':organisaatio-ui:webjar')
-run.dependsOn(':organisaatio-ui:webjar')
-startScripts.dependsOn(':organisaatio-ui:webjar')
-compileTestJava.dependsOn(':organisaatio-ui:webjar')
+bootJar {
+    from ('../organisaatio-ui/build') {
+        into 'META-INF/resources'
+    }
+}
