--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -113,6 +113,8 @@ dependencies {
     // Excel
     implementation group: 'org.apache.poi', name: 'poi', version: '5.2.5'
 
+    implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.3.1'
+
     // Test Dependencies
     testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.4.1'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: junitVersion
