--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -32,6 +32,8 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=20230726000000000
 
 spring.messages.basename=Messages
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 server.servlet.session.cookie.name=SESSION
 server.servlet.context-path=/organisaatio-service
 server.swagger.context-path=/swagger-ui
