--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -74,11 +74,6 @@ dependencies {
     implementation(group: 'fi.vm.sade.tarjonta', name: 'tarjonta-api', version: '9.7-SNAPSHOT') {
         exclude group: '*', module: '*'
     }
-    implementation(group: 'fi.vm.sade.oid', name: 'oid-api', version: '8.0') {
-        exclude group: 'org.slf4j', module: 'slf4j-api'
-        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
-        exclude group: 'org.slf4j', module: 'log4j'
-    }
 
     // Logback
     implementation group: 'ch.qos.logback', name: 'logback-access', version: '1.2.6'
@@ -108,6 +103,7 @@ dependencies {
     // Test Dependencies
     testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.4.1'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: junitVersion
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation group: 'org.powermock', name: 'powermock-reflect', version: '2.0.7'
     testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: '2.29.0'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
