--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -21,19 +21,21 @@ organisaatio.ui.ilmoitukset.url=${organisaatio.ui.url}/ilmoitukset
 
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.id.db_structure_naming_strategy: single
+spring.jpa.properties.hibernate.id.new_generator_mappings: true
 spring.main.allow-circular-references=true
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-spring.session.store-type=jdbc
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.table=schema_version_history2
-spring.flyway.validateOnMigrate=true
-spring.flyway.baseline-on-migrate=true
+spring.flyway.validate-on-migrate=true
+spring.flyway.baseline-on-migrate=false
 spring.flyway.baseline-version=20230726000000000
-
 spring.messages.basename=Messages
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
 server.servlet.session.cookie.name=SESSION
 server.servlet.context-path=/organisaatio-service
 server.swagger.context-path=/swagger-ui
