--- a/organisaatio-service/src/main/resources/config/sade.yml
+++ b/organisaatio-service/src/main/resources/config/sade.yml
@@ -5,3 +5,10 @@ feature.ostj-201-muotoilematon-viesti: false
 koodisto.baseurl: "https://${host.virkailija}/koodisto-service"
 viestinvalitys.baseurl: "https://viestinvalitys.opintopolku.fi/lahetys"
 viestinvalitys.uiurl: "https://viestinvalitys.opintopolku.fi/"
+
+organisaatio.tasks.export.enabled: false
+organisaatio.tasks.export.bucket-name: oph-yleiskayttoiset-export-sade
+organisaatio.tasks.export.copy-to-lampi: true
+organisaatio.tasks.export.lampi-bucket-name: oph-lampi-prod
+organisaatio.tasks.export.lampi-role-arn: ${ssm_lampi_role_arn}
+organisaatio.tasks.export.lampi-external-id: ${ssm_lampi_external_id}
