OPHYK-65 Add AWS clients required for export

--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -136,3 +136,10 @@ feature.ostj-201-muotoilematon-viesti=true
 
 aws.sns.lakkautusTopicArn=undefined
 aws.sns.enabled=false
+
+organisaatio.tasks.export.enabled: false
+organisaatio.tasks.export.bucket-name: none
+organisaatio.tasks.export.copy-to-lampi: false
+organisaatio.tasks.export.lampi-bucket-name: none
+organisaatio.tasks.export.lampi-role-arn: none
+organisaatio.tasks.export.lampi-external-id: none
