--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -71,8 +71,13 @@ dependencies {
     // Logback
     implementation group: 'ch.qos.logback', name: 'logback-access', version: '1.2.6'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.9'
-    // AWS Sns
+
+    // AWS
     implementation group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: '1.12.328'
+    implementation platform('software.amazon.awssdk:bom:2.25.23')
+    implementation 'software.amazon.awssdk:sts'
+    implementation 'software.amazon.awssdk:s3'
+    implementation 'software.amazon.awssdk:s3-transfer-manager'
 
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     // Lombok
