OPHYK-31 fix property syntax

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -22,8 +22,8 @@ organisaatio.ui.ilmoitukset.url=${organisaatio.ui.url}/ilmoitukset
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.id.db_structure_naming_strategy: single
-spring.jpa.properties.hibernate.id.new_generator_mappings: true
+spring.jpa.properties.hibernate.id.db_structure_naming_strategy=single
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.main.allow-circular-references=true
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.flyway.enabled=true
