--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -94,7 +94,8 @@ dependencies {
     implementation group: 'com.google.guava', name: 'guava', version: '33.1.0-jre'
 
     // Excel
-    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.5'
+    implementation 'org.apache.poi:poi:5.2.5'
+    implementation 'org.apache.poi:poi-ooxml:5.2.5'
 
     implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.14'
 
