use react-select without the virkailijaui component wrapper and upgrade to v5

--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -24,6 +24,7 @@
         "react-notifications-component": "^2.4.1",
         "react-router-dom": "5.2.0",
         "react-scripts": "^5.0.1",
+        "react-select": "^5.8.0",
         "react-table": "7.2.0",
         "react-window": "^1.8.10",
         "reactjs-popup": "^2.0.5",
@@ -42,7 +43,6 @@
         "@types/react-dom": "^16.9.20",
         "@types/react-notifications-component": "^3.1.2",
         "@types/react-router-dom": "5.1.5",
-        "@types/react-select": "^3.0.14",
         "@types/react-table": "^7.0.19",
         "@types/react-window": "^1.8.8",
         "@types/styled-components": "4.4.0",
