OPHYK-87 remove unused swagger values and set path matching

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -38,12 +38,12 @@ spring.servlet.multipart.max-request-size=10MB
 
 server.servlet.session.cookie.name=SESSION
 server.servlet.context-path=/organisaatio-service
-server.swagger.context-path=/swagger-ui
 server.rest.context-path=/rest
 server.internal.context-path=/internal
 server.api.context-path=/api
 
 springdoc.packagesToScan=fi.vm.sade.organisaatio.resource
+springdoc.pathsToMatch: /**
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.swagger-ui.syntaxHighlight.activated=false
 springdoc.api-docs.path=/api-docs
