--- a/organisaatio-ui/tsconfig.json
+++ b/organisaatio-ui/tsconfig.json
@@ -1,23 +1,35 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "lib": ["dom", "dom.iterable", "esnext"],
-        "allowJs": true,
-        "skipLibCheck": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "module": "esnext",
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "noEmit": true,
-        "jsx": "react",
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitAny": false,
-        "downlevelIteration": true
+      "target": "es6",
+      "lib": [
+        "dom",
+        "dom.iterable",
+        "es2019"
+      ],
+      "allowJs": false,
+      "skipLibCheck": false,
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
+      "strict": false,
+      "forceConsistentCasingInFileNames": true,
+      "noFallthroughCasesInSwitch": true,
+      "noImplicitAny": false,
+      "strictNullChecks": false,
+      "noImplicitThis": true,
+      "noImplicitReturns": true,
+      "strictFunctionTypes": true,
+      "allowUnreachableCode": false,
+      "allowUnusedLabels": false,
+      "noUncheckedIndexedAccess": true,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "module": "esnext",
+      "moduleResolution": "node",
+      "resolveJsonModule": true,
+      "isolatedModules": true,
+      "jsx": "react"
     },
-    "include": ["src"],
-    "files": ["./node_modules/react-scripts/lib/react-app.d.ts"]
-}
+    "include": [
+      "src"
+    ]
+  }
