--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -13,7 +13,7 @@
         "joi": "^17.4.0",
         "joi-phone-number": "^5.1.1",
         "jotai": "^1.5.3",
-        "moment": "^2.29.4",
+        "moment": "^2.30.1",
         "oph-urls-js": "github:Opetushallitus/oph-urls-js#master",
         "query-string": "^7.0.1",
         "react": "^16.14.0",
@@ -33,9 +33,8 @@
     "devDependencies": {
         "@cypress/code-coverage": "^3.12.1",
         "@cypress/instrument-cra": "^1.4.0",
-        "@types/jest": "^27",
         "@types/joi-phone-number": "^5.0.6",
-        "@types/node": "^16.18.54",
+        "@types/node": "^20.12.11",
         "@types/react": "^16.14.47",
         "@types/react-datepicker": "2.11.1",
         "@types/react-dom": "^16.9.20",
@@ -43,7 +42,7 @@
         "@types/react-router-dom": "5.1.5",
         "@types/react-table": "^7.0.19",
         "@types/react-window": "^1.8.8",
-        "@types/styled-components": "4.4.0",
+        "@types/styled-components": "^5",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
         "@typescript-eslint/parser": "^6.4.1",
         "concurrently": "^6.0.2",
@@ -52,18 +51,20 @@
         "cypress": "^10.11.0",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^8.10.0",
+        "eslint-plugin-cypress": "^3.2.0",
         "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-react": "^7.34.1",
         "file-loader": "^6.2.0",
+        "finnish-business-ids": "^3.1.1",
         "fork-ts-checker-webpack-plugin": "^9.0.2",
         "html-webpack-plugin": "^5.6.0",
         "mini-css-extract-plugin": "^2.9.0",
-        "finnish-business-ids": "^3.1.1",
         "prettier": "2.2.1",
         "pretty-quick": "^3.1.2",
         "source-map-loader": "^5.0.0",
         "style-loader": "^4.0.0",
         "ts-loader": "^9.4.2",
+        "tsx": "^4.10.1",
         "typescript": "^4.9.5",
         "wait-on": "^7.2.0",
         "webpack": "^5.91.0",
@@ -74,6 +75,7 @@
     "scripts": {
         "start": "NODE_ENV=development npx webpack serve",
         "build": "GENERATE_SOURCEMAP=false NODE_ENV=production npx webpack --mode production",
+        "test": "node --import tsx --test ./src/**/*.test.ts",
         "lint": "tsc --noEmit && eslint --ext .ts,.tsx src",
         "lint:fix": "eslint --ext .ts,.tsx src --fix",
         "prettier": "prettier --check 'src/**/*{js,jsx,ts,tsx}'",
@@ -89,7 +91,6 @@
         "plugins": [
             "@typescript-eslint",
             "cypress",
-            "jest",
             "react"
         ],
         "extends": [
@@ -97,8 +98,7 @@
             "plugin:@typescript-eslint/eslint-recommended",
             "plugin:@typescript-eslint/recommended",
             "plugin:react/recommended",
-            "plugin:cypress/recommended",
-            "plugin:jest/recommended"
+            "plugin:cypress/recommended"
         ],
         "settings": {
             "react": {
@@ -130,68 +130,8 @@
     "scarfSettings": {
         "enabled": false
     },
-    "jest": {
-        "roots": [
-            "<rootDir>/src"
-        ],
-        "collectCoverageFrom": [
-            "src/**/*.{js,jsx,ts,tsx}",
-            "!src/**/*.d.ts"
-        ],
-        "setupFiles": [
-            "react-app-polyfill/jsdom"
-        ],
-        "setupFilesAfterEnv": [],
-        "testMatch": [
-            "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-            "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-        ],
-        "testEnvironment": "jsdom",
-        "transform": {
-            "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-            "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-            "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-        },
-        "transformIgnorePatterns": [
-            "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-            "^.+\\.module\\.(css|sass|scss)$"
-        ],
-        "modulePaths": [],
-        "moduleNameMapper": {
-            "^react-native$": "react-native-web",
-            "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-        },
-        "moduleFileExtensions": [
-            "web.js",
-            "js",
-            "web.ts",
-            "ts",
-            "web.tsx",
-            "tsx",
-            "json",
-            "web.jsx",
-            "jsx",
-            "node"
-        ],
-        "watchPlugins": [
-            "jest-watch-typeahead/filename",
-            "jest-watch-typeahead/testname"
-        ],
-        "resetMocks": true,
-        "coverageReporters": [
-            "lcov"
-        ]
-    },
-    "nyc": {
-        "report-dir": "cypress-coverage"
-    },
     "engines": {
         "npm": "^10",
         "node": "^20"
-    },
-    "babel": {
-        "presets": [
-            "react-app"
-        ]
     }
 }
