--- a/organisaatio-ui/tsconfig.json
+++ b/organisaatio-ui/tsconfig.json
@@ -10,14 +10,11 @@
       "skipLibCheck": false,
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
-      "strict": false,
-      "forceConsistentCasingInFileNames": true,
+      "strict": true,
       "noFallthroughCasesInSwitch": true,
       "noImplicitAny": false,
       "strictNullChecks": false,
-      "noImplicitThis": true,
       "noImplicitReturns": true,
-      "strictFunctionTypes": true,
       "allowUnreachableCode": false,
       "allowUnusedLabels": false,
       "noUncheckedIndexedAccess": true,
@@ -27,9 +24,13 @@
       "moduleResolution": "node",
       "resolveJsonModule": true,
       "isolatedModules": true,
-      "jsx": "react"
+      "jsx": "react",
+      "types": []
     },
     "include": [
       "src"
+    ],
+    "exclude": [
+      "node_modules"
     ]
   }
