--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -41,8 +41,8 @@
         "@types/react-table": "^7.0.19",
         "@types/react-window": "^1.8.8",
         "@types/styled-components": "^5",
-        "@typescript-eslint/eslint-plugin": "^6.4.1",
-        "@typescript-eslint/parser": "^6.4.1",
+        "@typescript-eslint/eslint-plugin": "^7.8.0",
+        "@typescript-eslint/parser": "^7.8.0",
         "concurrently": "^6.0.2",
         "copy-webpack-plugin": "^12.0.2",
         "css-loader": "^6.11.0",
@@ -63,7 +63,7 @@
         "style-loader": "^4.0.0",
         "ts-loader": "^9.4.2",
         "tsx": "^4.10.1",
-        "typescript": "^4.9.5",
+        "typescript": "5.3.*",
         "wait-on": "^7.2.0",
         "webpack": "^5.91.0",
         "webpack-cli": "^5.1.4",
