--- a/varda-rekisterointi/.github/workflows/build.yml
+++ b/varda-rekisterointi/.github/workflows/build.yml
@@ -8,15 +8,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v3
-      - name: Set up node 16
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 20
           cache: 'npm'
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
+      - name: Build frontend
+        run: |
+          npm ci
+          npm run lint
+          npm test
+          npm run build
+      - uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'corretto'
@@ -44,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Download varda-rekisterointi-jar
         uses: actions/download-artifact@v2
         with:
