--- a/varda-rekisterointi/package.json
+++ b/varda-rekisterointi/package.json
@@ -10,29 +10,35 @@
         "@tanstack/react-table": "^8.5.13",
         "axios": "^0.27.2",
         "axios-hooks": "^4.0.0",
-        "classnames": "^2.2.6",
-        "date-fns": "^2.7.0",
+        "classnames": "^2.5.1",
+        "date-fns": "^2.30.0",
         "email-validator": "^2.0.4",
+        "lodash": "^4.17.21",
         "normalize.css": "^8.0.1",
         "oph-virkailija-style-guide": "github:Opetushallitus/virkailija-styles#master",
+        "react": "^16.14.0",
         "react-datepicker": "^2.9.6",
+        "react-dom": "^16.14.0",
         "react-router": "^5.3.3",
         "react-router-dom": "^5.3.3",
         "react-select": "^3.0.8",
-        "react-toastify": "^9.0.8",
+        "react-toastify": "^9.1.3",
         "styled-components": "^5.3.6",
         "universal-cookie": "^4.0.2",
         "use-debounce": "^3.1.0"
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.149",
+        "@types/lodash": "^4.17.1",
         "@types/node": "^20.12.11",
-        "@types/react-beforeunload": "^2.1.0",
+        "@types/react": "^16.14.60",
+        "@types/react-beforeunload": "^2.1.5",
         "@types/react-datepicker": "2.9.5",
-        "@types/react-router": "^5.1.19",
+        "@types/react-dom": "^16.9.24",
+        "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.3.3",
         "@types/react-select": "3.0.8",
         "@types/styled-components": "5.1.26",
+        "@types/styled-system": "^5.1.22",
         "@typescript-eslint/eslint-plugin": "^7.8.0",
         "@typescript-eslint/parser": "^7.8.0",
         "copy-webpack-plugin": "^12.0.2",
@@ -46,7 +52,7 @@
         "fork-ts-checker-webpack-plugin": "^9.0.2",
         "html-webpack-plugin": "^5.6.0",
         "mini-css-extract-plugin": "^2.9.0",
-        "prettier": "^2.7.1",
+        "prettier": "^3.2.5",
         "source-map-loader": "^5.0.0",
         "style-loader": "^4.0.0",
         "ts-loader": "^9.4.2",
