--- a/varda-rekisterointi/package.json
+++ b/varda-rekisterointi/package.json
@@ -45,7 +45,6 @@
         "css-loader": "^6.11.0",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^8.10.0",
-        "eslint-plugin-cypress": "^3.2.0",
         "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-react": "^7.34.1",
         "file-loader": "^6.2.0",
@@ -76,15 +75,13 @@
         "parser": "@typescript-eslint/parser",
         "plugins": [
             "@typescript-eslint",
-            "cypress",
             "react"
         ],
         "extends": [
             "eslint:recommended",
             "plugin:@typescript-eslint/eslint-recommended",
             "plugin:@typescript-eslint/recommended",
-            "plugin:react/recommended",
-            "plugin:cypress/recommended"
+            "plugin:react/recommended"
         ],
         "settings": {
             "react": {
