--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,32 +23,26 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-      - name: Use node
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: "npm"
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+          cache-dependency-path: organisaatio-ui/package-lock.json
+      - uses: actions/setup-java@v4
         with:
           java-version: "21"
           distribution: "corretto"
-      - name: Set timezone
-        uses: szenius/set-timezone@v2.0
+      - uses: szenius/set-timezone@v2.0
         with:
           timezoneLinux: "Europe/Helsinki"
-      - name: Validate Gradle wrapper
-        uses: gradle/actions/wrapper-validation@v3
-      - name: Setup gradle
-        uses: gradle/actions/setup-gradle@v3
+      - uses: gradle/actions/wrapper-validation@v3
+      - uses: gradle/actions/setup-gradle@v3
       - name: Build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./gradlew clean build
-      - name: Upload organisaatio-service-jar
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: organisaatio-service-jar
           path: organisaatio-service/build/libs/organisaatio-service.jar
@@ -68,8 +62,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       - name: Cypress coverrage cache
         uses: actions/cache@v4
         env:
@@ -77,13 +70,12 @@ jobs:
         with:
           path: organisaatio-ui/cypress-coverage
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
-      - name: Use node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: "npm"
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+          cache-dependency-path: organisaatio-ui/package-lock.json
+      - uses: actions/setup-java@v4
         with:
           java-version: "21"
           distribution: "corretto"
@@ -92,10 +84,8 @@ jobs:
           PGPASSWORD=postgres psql -c 'CREATE DATABASE organisaatio;' -h localhost -U postgres
           cd mock-api && npm install && cd -
           cd organisaatio-ui && npm install && cd -
-      - name: Validate Gradle wrapper
-        uses: gradle/actions/wrapper-validation@v3
-      - name: Setup gradle
-        uses: gradle/actions/setup-gradle@v3
+      - uses: gradle/actions/wrapper-validation@v3
+      - uses: gradle/actions/setup-gradle@v3
       - name: Build backend with no tests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -124,15 +114,13 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-      - name: Use node
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: "npm"
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+          cache-dependency-path: organisaatio-ui/package-lock.json
+      - uses: actions/setup-java@v4
         with:
           java-version: "21"
           distribution: "corretto"
@@ -142,10 +130,8 @@ jobs:
           cd mock-api && npm ci && cd -
           cd organisaatio-ui && npm ci && cd -
           cd playwright && npm ci && npx playwright install --with-deps && cd -
-      - name: Validate Gradle wrapper
-        uses: gradle/actions/wrapper-validation@v3
-      - name: Setup gradle
-        uses: gradle/actions/setup-gradle@v3
+      - uses: gradle/actions/wrapper-validation@v3
+      - uses: gradle/actions/setup-gradle@v3
       - name: Build backend with no tests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -188,8 +174,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Set timezone
@@ -197,14 +182,13 @@ jobs:
         with:
           timezoneLinux: "Europe/Helsinki"
       - name: Cypress coverrage cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         env:
           cache-name: cache-cypress-coverage
         with:
           path: organisaatio-ui/cypress-coverage
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           java-version: 21
           distribution: "corretto"
@@ -229,8 +213,7 @@ jobs:
     needs: [cypress, build, playwright]
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       - name: Download organisaatio-service-jar
         uses: actions/download-artifact@v4
         with:
@@ -255,17 +238,13 @@ jobs:
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           java-version: "21"
           distribution: "corretto"
-      - name: Validate Gradle wrapper
-        uses: gradle/actions/wrapper-validation@v3
-      - name: Setup gradle
-        uses: gradle/actions/setup-gradle@v3
+      - uses: gradle/actions/wrapper-validation@v3
+      - uses: gradle/actions/setup-gradle@v3
       - name: Publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -277,17 +256,13 @@ jobs:
     if: github.ref != 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           java-version: "21"
           distribution: "corretto"
-      - name: Validate Gradle wrapper
-        uses: gradle/actions/wrapper-validation@v3
-      - name: Setup gradle
-        uses: gradle/actions/setup-gradle@v3
+      - uses: gradle/actions/wrapper-validation@v3
+      - uses: gradle/actions/setup-gradle@v3
       - name: Publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
